remove default assignee

--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -2,7 +2,7 @@ name: Bug form
 description: File a Issue report
 title: "[BUG]: "
 labels: ["help wanted"]
-assignees: ''
+# assignees: ''
 body:
   - type: markdown
     attributes:
